create aggregate invoice

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": ">=5.6",
     "wsw/money": "^1.0",
     "wsw/email": "^1.1",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "jms/serializer":"~1.1"
   },
   "require-dev": {
     "rdehnhardt/var-dumper": "^1.1",
